WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167604
[iOS] position:fixed inside touch-scrollable overflow is mispositioned
https://bugs.webkit.org/show_bug.cgi?id=167604
Summary
[iOS] position:fixed inside touch-scrollable overflow is mispositioned
Simon Fraser (smfr)
Reported
2017-01-30 14:14:10 PST
[iOS] position:fixed inside touch-scrollable overflow is mispositioned
Attachments
Patch
(7.22 KB, patch)
2017-01-30 14:16 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(10.32 KB, patch)
2017-01-30 14:34 PST
,
Simon Fraser (smfr)
zalan
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2017-01-30 14:16:38 PST
Created
attachment 300141
[details]
Patch
Simon Fraser (smfr)
Comment 2
2017-01-30 14:34:30 PST
Created
attachment 300142
[details]
Patch
alan
Comment 3
2017-01-30 14:45:40 PST
Comment on
attachment 300142
[details]
Patch Double changelog.
Simon Fraser (smfr)
Comment 4
2017-01-30 14:53:55 PST
https://trac.webkit.org/r211387
29500273
Simon Fraser (smfr)
Comment 5
2017-01-30 14:54:17 PST
rdar://problem/29500273
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug